--- a/Review_Classifier_ANN.ipynb
+++ b/Review_Classifier_ANN.ipynb
@@ -2143,47 +2143,76 @@
       "metadata": {
         "id": "vK57iDyPHmvf",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "outputId": "1dbfe88e-7fff-4b85-8da2-dac2299e27c3"
+        "colab": {}
       },
       "source": [
         "def funct(x):\n",
-        "  if x= 'review/overall_0.0':\n",
+        " \n",
+        "  if x == 'review/overall_0.0':\n",
         "    return 0\n",
-        "  elif x= 'review/overall_1.0':\n",
+        "  elif x == 'review/overall_1.0':\n",
         "    return 1\n",
-        "  elif x= 'review/overall_1.5':\n",
+        "  elif x== 'review/overall_1.5':\n",
         "    return 1.5\n",
-        "  elif x= 'review/overall_2.0':\n",
+        "  elif x== 'review/overall_2.0':\n",
         "    return 2\n",
-        "  elif x= 'review/overall_2.5':\n",
+        "  elif x== 'review/overall_2.5':\n",
         "    return 2.5\n",
-        "  elif x= 'review/overall_3.0':\n",
+        "  elif x== 'review/overall_3.0':\n",
         "    return 3\n",
-        "  elif x= 'review/overall_3.5':\n",
+        "  elif x== 'review/overall_3.5':\n",
         "    return 3.5\n",
-        "  elif x= 'review/overall_4.0':\n",
+        "  elif x== 'review/overall_4.0':\n",
         "    return 4\n",
-        "  elif x= 'review/overall_4.5':\n",
+        "  elif x== 'review/overall_4.5':\n",
         "    return 4.5\n",
         "  else:\n",
         "    return 5\n",
         "\n",
         "\n",
-        "y_val['review/overall'] = y_val['level_1'].apply(lambda x: funct(x),axis=1)"
+        "y_val['review'] = y_val.apply(lambda x:funct(x['level_1']),axis=1)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QhGQ18SrQPaS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "95e649bd-6292-4bc3-fda3-78dc6b7ffe8e"
+      },
+      "source": [
+        "y_val['review']"
+      ],
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-7c317ca62206>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if x= 'review/overall_0.0':\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       4.5\n",
+              "1       3.0\n",
+              "2       3.5\n",
+              "3       5.0\n",
+              "4       4.0\n",
+              "       ... \n",
+              "3370    4.0\n",
+              "3371    3.5\n",
+              "3372    3.5\n",
+              "3373    5.0\n",
+              "3374    4.0\n",
+              "Name: review, Length: 3375, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
         }
       ]
     },
@@ -2202,33 +2231,45 @@
       "metadata": {
         "id": "IN-kGUnRHl3F",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "62f1130c-d7f6-4e2a-e3e3-c295fd4b7312"
       },
       "source": [
-        ""
+        "# function to check predicted accuracy\n",
+        "def accuracy(df,k):\n",
+        "  k = 0\n",
+        "  for i in range(len(df)):\n",
+        "    if df[i] == y_pred[i]:\n",
+        "      k = k+1\n",
+        "  \n",
+        "  acc = (k*100)/len(y_val)\n",
+        "  return acc\n",
+        "\n",
+        "print(accuracy(y_val['review'], y_pred))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1GHkjfS8ACo_",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20.94814814814815\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZkSc04PI-zlf",
+        "id": "mSdM4AsiSvgs",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Poor accuracy"
       ],
       "execution_count": 0,
       "outputs": []
